[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cookie/Cookie.gd" type="Script" id=1]
[ext_resource path="res://Cookie/cookie-100.png" type="Texture" id=2]
[ext_resource path="res://Cookie/cookie-75.png" type="Texture" id=3]
[ext_resource path="res://Cookie/cookie-50.png" type="Texture" id=4]
[ext_resource path="res://Cookie/cookie-25.png" type="Texture" id=5]
[ext_resource path="res://16213.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Cookie" type="Node2D"]
script = ExtResource( 1 )
max_hp = 30

[node name="Cookie100" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( -55, -55 )

[node name="Cookie75" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( -55, -55 )

[node name="Cookie50" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
offset = Vector2( -55, -55 )

[node name="Cookie25" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
offset = Vector2( -55, -55 )

[node name="Label" type="Label" parent="."]
margin_left = -118.292
margin_top = -81.0659
margin_right = 0.70784
margin_bottom = -47.0659
rect_rotation = -31.4083
custom_fonts/font = SubResource( 1 )
text = "10 / 10"
align = 1
